# KeyHint

./: .gitignore  KEYHINT_RALPH_STEPS.md  README.md  TODOS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json
.omx/plans/: ralplan-source-resolver-local-store-handoff.json  ralplan-source-resolver-local-store.md
data/shortcut-maps/: cursor.json
docs/: PRD.md  active-app-resolver-spike.md  developer-commands.md  distribution-readiness.md  hud-renderer-fallback.md  implementation-plan.md  mock-hud.md  native-event-collector-spike.md  privacy.md  qa-dogfood.md  release.md  settings-ia.md  shortcut-maps.md  tauri-scaffold-notes.md  test-automation.md  test-spec.md  troubleshooting.md  unknown-inbox.md
scripts/: keyhint.mjs  verify-automation-coverage.ts  verify-distribution-readiness.ts  verify-docs.ts  verify-keyhint-cli.mjs  verify-mock-hud.ts  verify-qa-plan.ts  verify-render-safety.ts  verify-settings-ia.ts  verify-source-resolver.ts  verify-unknown-inbox.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/native/: active_app.rs  event_collector.rs  hud_renderer.rs  mod.rs
src/keyhint/: htmlEscape.ts  localStoreSchema.ts  mockHud.ts  permissionPolicy.ts  redaction.ts  settingsIa.ts  shortcutEventQueue.ts  shortcutNormalizer.ts  sourceResolver.ts  unknownInbox.ts
