[package]
name = "keyhint"
version = "0.1.0"
description = "KeyHint for Mac"
authors = ["manuel71"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
